Source/WebCore/html/HTMLViewSourceDocument.h
@@ -58,7 +58,7 @@ private:
     void addLine(const AtomicString& className);
     void finishLine();
     void addText(const String& text, const AtomicString& className);
-    int addRange(const String& source, int start, int end, const String& className, bool isLink = false, bool isAnchor = false);
+    int addRange(const String& source, int start, int end, const String& className, bool isLink = false, bool isAnchor = false, const String& link = String());
     PassRefPtr<Element> addLink(const AtomicString& url, bool isAnchor);
     PassRefPtr<Element> addBase(const AtomicString& href);
 
